--- a/note-app/package.json
+++ b/note-app/package.json
@@ -14,6 +14,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.3",
-    "vite": "^5.0.11"
+    "uuid": "^9.0.1",
+    "vite": "^5.0.11",
+    "vue-contenteditable": "^4.1.0"
   }
 }
